# sample

./: .gitignore  CMakeLists.txt  NewFile.txt  glade.ui  memo.txt  smapho.xcf  tserver.cpp  wsserver.memo
src/: .gitignore  CMakeLists.txt  Network.cpp  Network.h  Smartphone.cpp  Smartphone.h  common.h  glview.cpp  input.cpp  input.h  main.cpp  makefile  manager.cpp  manager.h  model.cpp  model.h  mynetwork.cpp  mynetwork.h  mysmartphone.cpp  mysmartphone.h  network.cpp  network.h  scene.cpp  scene.h  smartphone.cpp  smartphone.h  view.cpp  view.h
